2003-03-08  Philippe Elie  <phil.el@wanadoo.fr>

	* doc/xsl/.cvsignore: update

	* module/x86/cpu_type.c: <smpboot.h> is not necessary

2003-03-07  John Levon  <levon@movementarian.org>

	* README: document autogen.sh

2003-03-07  Philippe Elie  <phil.el@wanadoo.fr>

	* TODO: update

	* doc/xsl/xhtml.xsl.in: move to
	* doc/xsl/xhtml-1.xsl.in: here
	* doc/xsl/xhtml-chunk.xsl.in: move to
	* doc/xsl/xhtml-chunk-1.xsl.in: here
	* doc/Makefile.am; update according
	* configure.in: avoid to touch doc/xsl generated files

2003-03-07  Philippe Elie  <phil.el@wanadoo.fr>

	* TODO: update

	* daemon/opd_image.c:
	* daemon/op_stats.c:
	* daemon/opd_stats.h: add statistics for nil image whilst receiveing
	  user space samples.

2003-03-06  Philippe Elie  <phil.el@wanadoo.fr>

	* TODO: update

	* libdb/db_hash.h:
	* libdb/db_insert.c: get error message from db_insert()

	* libdb/db_test.c:
	* dae/opd_proc.c:
	* daemon/opd_image.c:
	* libabi/abi_test.cpp:
	* libabi/op_import.cpp:
	* pp/op_merge.cpp: update according to the new api

2003-03-06  John Levon  <levon@movementarian.org>

	* doc/oprofile.xml: pedantry

2003-03-06  Philippe Elie  <phil.el@wanadoo.fr>

	* TODO: update

	* doc/oprofile.1.in:
	* doc/oprofile.xml: document --smart-demangle

2003-03-06  Philippe Elie  <phil.el@wanadoo.fr>

	* module/ia64/op_pmu.c:
	* module/x86/op_nmi.c: remove #include <op_events.h>

2003-03-06  John Levon  <levon@movementarian.org>

	* utils/opcontrol: sh != C. This is the last opcontrol
	  bug, honest ! OK, maybe not.

2003-03-06  Philippe Elie  <phil.el@wanadoo.fr>

	* TODO: update

	* gui/oprof_start.cpp: save_config() gcc 2.95.3 warning work-around

2003-03-05  John Levon  <levon@movementarian.org>

	* utils/opcontrol: Make --setup optional (e.g.
	  opcontrol --no-vmlinux). Fix a bug in the --setup
	  exclusive arg testing.

	* doc/oprofile.xml: reflect the above

2003-03-05  John Levon  <levon@movementarian.org>

	* libutil++/string_manip.h: