@@ -4,7 +4,7 @@ MANDIR=$(DESTDIR)@mandir@/man1
 XSLTPROC=xsltproc
 XHTML_STYLESHEET=xsl/xhtml.xsl
 CHUNK_XHTML_STYLESHEET=xsl/xhtml-chunk.xsl
-STYLESHEETS=$(CHUNK_XHTML_STYLESHEET) xsl/xhtml-common.xsl
+STYLESHEETS=$(CHUNK_XHTML_STYLESHEET) $(srcdir)/xsl/xhtml-common.xsl
 
 generated_mans = oprofiled.1 op_help.1 oprofpp.1 op_time.1 op_to_source.1 op_merge.1 opcontrol.1
 
@@ -18,11 +18,11 @@ $(generated_mans):
 
 if have_xsltproc
 
-oprofile.html: oprofile.xml $(STYLESHEETS)
+oprofile.html: ${top_srcdir}/doc/oprofile.xml
 	$(XSLTPROC) --stringparam version @VERSION@ $(XHTML_STYLESHEET) $< > $@
 
 # rules to generate oprofile.sf.net/doc files
-chunk: oprofile.xml $(STYLESHEETS)
+chunk: ${top_srcdir}/doc/oprofile.xml
 	$(XSLTPROC) --stringparam version @VERSION@ $(CHUNK_XHTML_STYLESHEET) $<
 
 else
@@ -34,6 +34,9 @@ chunk:
 
 endif
 
+distclean-local:
+	$(RM) -f xsl/xhtml.xsl xsl/xhtml-chunk.xsl
+
 clean-local:
 	$(RM) -f $(generated_mans)
 
@@ -44,5 +47,5 @@ uninstall-local:
 		rm -f $(CATDIR)/cat1/$$f.gz;	\
 	done
 
-EXTRA_DIST = oprofile.1 oprofile.1.in oprofile.xml xsl/xhtml-chunk-1.xsl.in xsl/xhtml-chunk.xsl xsl/xhtml-common.xsl xsl/xhtml.xsl xsl/xhtml-1.xsl.in srcdoc/Doxyfile srcdoc/Makefile
+EXTRA_DIST = oprofile.1 oprofile.1.in oprofile.xml xsl/xhtml-chunk-1.xsl.in xsl/xhtml-common.xsl xsl/xhtml-1.xsl.in srcdoc/Doxyfile srcdoc/Makefile
 
