@@ -3,7 +3,7 @@
 xmlns:doc="http://nwalsh.com/xsl/documentation/1.0" version="1.0">
  
 <xsl:import href="@db_xsl@/docbook.xsl"/>
-<xsl:import href="xhtml-common.xsl"/>
+<xsl:import href="@top_srcdir@/doc/xsl/xhtml-common.xsl"/>
  
 <!-- this will give you the doctype on your chunks -->
 <xsl:output method="xml" encoding="ISO-8859-1" indent="yes"
