@@ -2,7 +2,7 @@
 <xsl:stylesheet xmlns:xsl="http://www.w3.org/1999/XSL/Transform"
  version="1.0">
 <xsl:import href="@db_xsl@/chunk.xsl"/>
-<xsl:import href="xhtml-common.xsl"/>
+<xsl:import href="@top_srcdir@/doc/xsl/xhtml-common.xsl"/>
  
 <xsl:template name="process-chunk">
   <xsl:param name="prev" select="."/>
